getting Will credit!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ excerpt:
 ---
 
 <p><a href="/what/community/dei-coalition/join/"><img src="/media/img/dei-coalition/dei-card-A1.png" alt="Screenshot of SRCCON:Heart participants." style="width: 100%;"></a></p>
-<p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">We've officially live! <a href="/what/community/dei-coalition/join/">Join now</a>.</p>
+<p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">We've officially live! <a href="/what/community/dei-coalition/join/">Join now</a>. (<a href="https://iniwil.github.io/">William Lager</a> for OpenNews and the DEI Coalition)</p>
 
 <h2>DEI Coalition Slack is Live!</h2>
 
