adding a link to the normal dei coalition page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ excerpt:
 
 <h2>DEI Coalition Slack is Live!</h2>
 
-<p class="bodybig"><a href="/what/community/dei-coalition/join/">Join the DEI Coalition Slack</a>, a digital space co-created by OpenNews and over 100 members of the journalism community dedicated to sharing knowledge and taking concrete action in service of a more anti-racist, equitable, and just journalism industry.</p>
+<p class="bodybig"><a href="/what/community/dei-coalition/join/">Join the DEI Coalition Slack</a>, a digital space co-created by OpenNews and over 100 members of the journalism community dedicated to sharing knowledge and taking concrete action in service of a more anti-racist, equitable, and just journalism industry. <a href="/what/community/dei-coalition/">Learn more about the Coalition.</a></p>
 
 <!-- <p class="bodybig" style="margin-bottom: 3em;">If OpenNews was a part of what helped you get through this year, please consider <a href="https://opennews.org/donate">becoming a sustainer</a> to support this work.
 </p> -->
