mocking up homepage with a tag variant

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: post_notitle
 title: OpenNews — Connecting the journalism-tech network that collaborates on open technologies and processes within journalism
+section: homepage
 excerpt: 
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
