--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
+<h2>DEI Coalition Slack is Live!</h2>
+
 <p><a href="/what/community/dei-coalition/join/"><img src="/media/img/dei-coalition/dei-card-A1.png" alt="Screenshot of SRCCON:Heart participants." style="width: 100%;"></a></p>
 <p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">We've officially live! <a href="/what/community/dei-coalition/join/">Join now</a>. (Image by <a href="https://iniwil.github.io/">William Lager</a> for OpenNews and the DEI Coalition)</p>
-
-<h2>DEI Coalition Slack is Live!</h2>
 
 <p class="bodybig"><a href="/what/community/dei-coalition/join/">Join the DEI Coalition Slack</a>, a digital space co-created by OpenNews and over 100 members of the journalism community dedicated to sharing knowledge and taking concrete action in service of a more anti-racist, equitable, and just journalism industry. <a href="/what/community/dei-coalition/">Learn more about the Coalition.</a></p>
 
@@ -30,6 +30,7 @@ excerpt:
  -->
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
+<p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
 
 <ul class="bloglist">
   {% for post in site.posts limit:10 %}
@@ -39,4 +40,5 @@ excerpt:
     </li>
   {% endfor %}
 </ul>
-<p>Read more at the <a href="/blog">OpenNews Blog.</a></p>
+
+<p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
