new staged srccon splash

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2>DEI Coalition Slack is Live!</h2>
+<h2>SRCCON is Aug. 11-13</h2>
 
-<p><a href="/what/community/dei-coalition/join/"><img src="/media/img/dei-coalition/dei-card-A1.png" alt="Screenshot of SRCCON:Heart participants." style="width: 100%;"></a></p>
-<p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">We've officially live! <a href="/what/community/dei-coalition/join/">Join now</a>. (Image by <a href="https://iniwil.github.io/">William Lager</a> for OpenNews and the DEI Coalition)</p>
-
-<p class="bodybig"><a href="/what/community/dei-coalition/join/">Join the DEI Coalition Slack</a>, a digital space co-created by OpenNews and over 100 members of the journalism community dedicated to sharing knowledge and taking concrete action in service of a more anti-racist, equitable, and just journalism industry. <a href="/what/community/dei-coalition/">Learn more about the Coalition.</a></p>
+<p><a href="https://2021.srccon.org"><img class="srccon-logo" src="/media/img/srccon_2021_logo.png" alt="Black and white logo that says SRCCON 2021." style="width: 100%;"></a></p>
+<style>
+  img.srccon-logo {
+    border: 1px solid #ccc;
+    padding: 15px;
+    box-sizing: border-box;
+  }
+</style>
+<!-- <p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">We've officially live! <a href="/what/community/dei-coalition/join/">Join now</a>. (Image by <a href="https://iniwil.github.io/">William Lager</a> for OpenNews and the DEI Coalition)</p>
+ -->
+<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities will take place online from Aug. 11-13, 2021. Our <a href="https://2021.srccon.org/participation/form/">call for participation form</a> is now open! <a href="https://2021.srccon.org/">Learn more and join us</a>.</p>
 
 <!-- <p class="bodybig" style="margin-bottom: 3em;">If OpenNews was a part of what helped you get through this year, please consider <a href="https://opennews.org/donate">becoming a sustainer</a> to support this work.
 </p> -->
