--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2>SRCCON is Aug. 11-13</h2>
+<h2>We did it! 🎉</h2>
 
 <p><a href="https://2021.srccon.org"><img class="srccon-logo" src="/media/img/srccon_2021_logo.png" alt="Black and white logo that says SRCCON 2021." style="width: 100%;"></a></p>
 <style>
@@ -18,7 +18,7 @@ excerpt:
 </style>
 <!-- <p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">We've officially live! <a href="/what/community/dei-coalition/join/">Join now</a>. (Image by <a href="https://iniwil.github.io/">William Lager</a> for OpenNews and the DEI Coalition)</p>
  -->
-<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities will take place online from Aug. 11-13, 2021. Our <a href="https://2021.srccon.org/participation/form/">call for participation form</a> is now open! <a href="https://2021.srccon.org/">Learn more and join us</a>.</p>
+<p class="bodybig">On Aug. 11-13, 2021, participants came together at <a href="https://2021.srccon.org/">SRCCON 2021</a> and built an unforgettable space to work on our hopes for journalism — what we’ll be shedding and leaving behind, what we’ll create anew, and how we can support one another through it all. <a href="https://2021.srccon.org/">Here's what we did and what participants said.</a></p>
 
 <!-- <p class="bodybig" style="margin-bottom: 3em;">If OpenNews was a part of what helped you get through this year, please consider <a href="https://opennews.org/donate">becoming a sustainer</a> to support this work.
 </p> -->
