testing out fundraising cta

--- a/index.html
+++ b/index.html
@@ -6,27 +6,39 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2>We did it! 🎉</h2>
+<h2 class="special">Help us Kick Off our Second Decade Strong! 💪 🎉</h2>
+<a href="/donate/"><img class="big-image" src="/media/img/10-year-anniversary-srccon-2015-v2.png" style="width: 100%;" alt="A collage of photos, all of participants talking, working on projects, or collaborating."></a>
+<p class="caption" style="text-align: left; margin-top: 2px;">Help us strengthen our work with the community, <a href="/donate/">make a special, 10-year donation</a>! (Photos by <a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
-<p><a href="https://2021.srccon.org"><img class="srccon-logo" src="/media/img/srccon_2021_logo.png" alt="Black and white logo that says SRCCON 2021." style="width: 100%;"></a></p>
+
 <style>
-  img.srccon-logo {
+  h2.special {
+    text-transform: none;
+    font-size: 2.3rem;
+    margin-bottom: 20px;
+    line-height: 2.8rem;
+  }
+  img.big-image {
     border: 1px solid #ccc;
-    padding: 15px;
     box-sizing: border-box;
   }
+  a#one-time-button {
+    max-width: 400px;
+    margin: 0 auto;
+    font-family: 'sofia-pro';
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 </style>
-<!-- <p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">We've officially live! <a href="/what/community/dei-coalition/join/">Join now</a>. (Image by <a href="https://iniwil.github.io/">William Lager</a> for OpenNews and the DEI Coalition)</p>
- -->
-<p class="bodybig">On Aug. 11-13, 2021, participants came together at <a href="https://2021.srccon.org/">SRCCON 2021</a> and built an unforgettable space to work on our hopes for journalism — what we’ll be shedding and leaving behind, what we’ll create anew, and how we can support one another through it all. <a href="https://2021.srccon.org/">Here's what we did and what participants said.</a></p>
 
-<!-- <p class="bodybig" style="margin-bottom: 3em;">If OpenNews was a part of what helped you get through this year, please consider <a href="https://opennews.org/donate">becoming a sustainer</a> to support this work.
-</p> -->
+<p class="bodybig">Earlier this year, we <a href="/blog/10-year-anniversary/">celebrated OpenNews’ 10 year annivesary!</a> As we go into strategic planning this fall, one-time gifts will help build a starter fund to give us the flexibility to seed and water the new program ideas we come up with immediately. Many of <a href="/what/community/">OpenNews’ programs</a>, like the <a href="/what/community/dei-coalition">DEI Coalition</a> and <a href="/what/community/scholarships/">Scholarships+ program</a>, were made possible because we had starter funding to pursue whatever programs we could dreamed up to best serve the community.</p>
 
-<!-- <p>
-    <a class="sidebar-button" href="https://opennews.networkforgood.com">Become a sustainer</a>
+<p class="bodybig">At <a href="https://2021.srccon.org">SRCCON 2021</a>, participants and our wider community members together raised over 150% of our modest $5,000 goal! 🤯 If you'd like to add your support to OpenNews’ ability to pursue program ideas without barriers, make a special, one-time donation!</p>
+
+<p style="margin-bottom: 3em;">
+    <a class="sidebar-button" id="one-time-button" href="/donate/">Make a special, 10-year donation!</a>
 </p>
- -->
+
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 <p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
