--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2 class="special">Help us Kick Off our Second Decade Strong! 💪 🎉</h2>
+<h2 class="special">Ten years of building authentic relationships </h2>
 <a href="/donate/"><img class="big-image" src="/media/img/10-year-anniversary-srccon-2015-v2.png" style="width: 100%;" alt="A collage of photos, all of participants talking, working on projects, or collaborating."></a>
-<p class="caption" style="text-align: left; margin-top: 2px;">Help us strengthen our work with the community, <a href="/donate/">make a special, 10-year donation</a>! (Photos by <a href="http://www.westraco.com/">Erik Westra</a>)</p>
+<p class="caption" style="text-align: left; margin-top: 2px;">For ten years OpenNews has brought together journalists to learn from and share techniques, processes, and values with each other. (Photos by <a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
 
 <style>
@@ -31,13 +31,7 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">Earlier this year, we <a href="/blog/10-year-anniversary/">celebrated OpenNews’ 10 year annivesary!</a> As we go into strategic planning this fall, one-time gifts will help build a starter fund to give us the flexibility to seed and water the new program ideas we come up with immediately. Many of <a href="/what/community/">OpenNews’ programs</a>, like the <a href="/what/community/dei-coalition">DEI Coalition</a> and <a href="/what/community/scholarships/">Scholarships+ program</a>, were made possible because we had starter funding to pursue whatever programs we could dreamed up to best serve the community.</p>
-
-<p class="bodybig">At <a href="https://2021.srccon.org">SRCCON 2021</a>, participants and our wider community members together raised over 150% of our modest $5,000 goal! 🤯 If you'd like to add your support to OpenNews’ ability to pursue program ideas without barriers, make a special, one-time donation!</p>
-
-<p style="margin-bottom: 3em;">
-    <a class="sidebar-button" id="one-time-button" href="/donate/">Make a special, 10-year donation!</a>
-</p>
+<p class="bodybig">This year, OpenNews <a href="/blog/10-year-anniversary/">celebrates its 10 year anniversary!</a> As we enter our second decade, we’re deepening our work toward a future where journalism values every journalist, no matter their background, job title, or organization, and all journalists enjoy the same levels of respect, support, and opportunity. Learn how to <a href=”/getinvolved/”>get involved</a>. </p>
 
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
