fixing smart quotes in link and changing the image url to be the blog post

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ excerpt:
 ---
 
 <h2 class="special">Ten years of building authentic relationships </h2>
-<a href="/donate/"><img class="big-image" src="/media/img/10-year-anniversary-srccon-2015-v2.png" style="width: 100%;" alt="A collage of photos, all of participants talking, working on projects, or collaborating."></a>
+<a href="/blog/10-year-anniversary/"><img class="big-image" src="/media/img/10-year-anniversary-srccon-2015-v2.png" style="width: 100%;" alt="A collage of photos, all of participants talking, working on projects, or collaborating."></a>
 <p class="caption" style="text-align: left; margin-top: 2px;">For ten years OpenNews has brought together journalists to learn from and share techniques, processes, and values with each other. (Photos by <a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
 
@@ -31,7 +31,7 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">This year, OpenNews <a href="/blog/10-year-anniversary/">celebrates its 10 year anniversary!</a> As we enter our second decade, we’re deepening our work toward a future where journalism values every journalist, no matter their background, job title, or organization, and all journalists enjoy the same levels of respect, support, and opportunity. Learn how to <a href=”/getinvolved/”>get involved</a>. </p>
+<p class="bodybig">This year, OpenNews <a href="/blog/10-year-anniversary/">celebrates its 10 year anniversary!</a> As we enter our second decade, we’re deepening our work toward a future where journalism values every journalist, no matter their background, job title, or organization, and all journalists enjoy the same levels of respect, support, and opportunity. Learn how to <a href="/getinvolved/">get involved</a>. </p>
 
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
