--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2 class="special">Ten years of building authentic relationships </h2>
-<a href="/blog/10-year-anniversary/"><img class="big-image" src="/media/img/10-year-anniversary-srccon-2015-v2.png" style="width: 100%;" alt="A collage of photos, all of participants talking, working on projects, or collaborating."></a>
-<p class="caption" style="text-align: left; margin-top: 2px;">For ten years OpenNews has brought together journalists to learn from and share techniques, processes, and values with each other. (Photos by <a href="http://www.westraco.com/">Erik Westra</a>)</p>
+<h2 class="special">DEI Coalition Year 2: Taking Action</h2>
+<a href="/blog/10-year-anniversary/"><img class="big-image" src="/media/img/dei-coalition/dei-card-A1.png" style="width: 100%;" alt="DEI Coalition logo"></a>
+<p class="caption" style="text-align: left; margin-top: 2px;">✨ It’s officially been one year since we launched the DEI Coalition Slack! ✨ (Image by <a href="https://iniwil.github.io/">William Lager</a> for OpenNews and the DEI Coalition)</p>
 
 
 <style>
@@ -30,9 +30,9 @@ excerpt:
     line-height: 2rem;
   }
 </style>
+<p class="bodybig">🚀 Year 2 of the <a href="/what/community/dei-coalition/">DEI Coalition Slack</a> is focused on taking action and creating systemic change — while being joyful, flexible, and collaborative. We'd love for you to join. <a href="/blog/dei-coalition-year-2-taking-action/">Read our full announcement</a>. <a href="https://docs.google.com/forms/d/e/1FAIpQLScOhYekI1tbDajjoRQg3TxHdit09nSIcf6pklHJcOACyOVT1Q/viewform">Sign up to join!</a></p>
 
-<p class="bodybig">This year, OpenNews <a href="/blog/10-year-anniversary/">celebrates its 10 year anniversary!</a> As we enter our second decade, we’re deepening our work toward a future where journalism values every journalist, no matter their background, job title, or organization, and all journalists enjoy the same levels of respect, support, and opportunity. Learn how to <a href="/getinvolved/">get involved</a>. </p>
-
+<p class="bodybig">One year ago, OpenNews and over 100 members of the journalism community launched the DEI Coalition Slack as a dedicated digital space to share knowledge and take concrete action in service of a more anti-racist, equitable and just journalism industry. Our first year was about <a href="https://docs.google.com/document/d/1xzZlzvUkbGCb9EjYrLUx_QSpSGCAgSY8UuXqsxBGB3Q/edit">intentionality</a>, <a href="https://source.opennews.org/articles/redesigning-brainstorming-asynchronous/">relationships</a>, <a href="https://source.opennews.org/articles/community-q-white-manager-building-trust-allyship/">resources</a>, and organic growth.</p>
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 <p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
