--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities is online from June 22-24, 2022. <strong>Want to join us? <a href="https://2022.srccon.org/participation/form/">It's not too late, we still have tickets!</a></strong>
+<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities is online from June 22-24, 2022.
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 <p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
