2022 news nerd survey launch

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2 class="special">SRCCON is June 22-24</h2>
-<a href="https://2022.srccon.org/"><img class="big-image" src="/media/img/srccon_2022_logo.png" style="width: 100%;" alt="SRCCON 2022 logo"></a>
+<h2 class="special">News Nerd Survey returns</h2>
+<a href="https://www.research.net/r/2022_OpenNewsSurvey"><img class="big-image" src="/media/img/survey-page.jpg" style="width: 100%;" alt="many wooden chips with OpenNews' dot logo"></a>
 <!--<p class="caption" style="text-align: left; margin-top: 2px;"></p>-->
 
 
@@ -31,7 +31,7 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities is online from June 22-24, 2022.
+<p class="bodybig">We know the power that data can hold. The <a href="/blog/news-nerd-survey-2022/">return of the News Nerd Survey</a> allows us to better understand the journalism industry and our roles within it. 
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 <p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
