scholarships+ splash update

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2 class="special">News Nerd Survey returns</h2>
-<a href="https://www.research.net/r/2022_OpenNewsSurvey"><img class="big-image" src="/media/img/survey-page.jpg" style="width: 100%;" alt="many wooden chips with OpenNews' dot logo"></a>
-<!--<p class="caption" style="text-align: left; margin-top: 2px;"></p>-->
+<h2 class="special">Apply for Scholarships+</h2>
+<a href="/what/community/scholarships/"><img class="big-image" src="/media/img/index_opennewsphoto.jpg" style="width: 100%;" alt="rows of dozens of people sitting on stairs, raising their arms in celebration of the Media Party in Buenos Aires"></a>
+<p class="caption" style="text-align: left; margin-top: 2px;">The joyful crowd at the Hacks/Hackers Buenos Aires Media Party. (photo/Ramiro Chanes)</p>
 
 
 <style>
@@ -31,7 +31,7 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">We know the power that data can hold. The <a href="/blog/news-nerd-survey-2022/">return of the News Nerd Survey</a> allows us to better understand the journalism industry and our roles within it. 
+<p class="bodybig">We want to help <a href="/blog/scholarships-2022/">strengthen your network and skills</a>. Our Scholarships+ application is open till August 5 to receive a stipend to atend a conference, take a class, join a training, or sign up for a leadership program. <a href="https://docs.google.com/forms/d/e/1FAIpQLScJniGICC1w2791v7Qp4Epgg88OTqvuBOR1Wk1xnGwnebVlng/viewform">Apply now.</a>
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 <p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
