srccon:care update

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2 class="special">News Nerd Survey returns</h2>
-<a href="https://www.research.net/r/2022_OpenNewsSurvey"><img class="big-image" src="/media/img/survey-page.jpg" style="width: 100%;" alt="many wooden chips with OpenNews' dot logo"></a>
+<h2 class="special">Join us for SRCCON:CARE</h2>
+<a href="http://srccon.org/srccon-care-2022/"><img class="big-image" src="/media/img/srccon_care_logo.png" style="width: 100%;" alt="SRCCON:CARE logo with OpenNews logo dots in place of the O"></a>
 <!--<p class="caption" style="text-align: left; margin-top: 2px;"></p>-->
 
 
@@ -31,7 +31,7 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">We know the power that data can hold. The <a href="/blog/news-nerd-survey-2022/">return of the News Nerd Survey</a> allows us to better understand the journalism industry and our roles within it. 
+<p class="bodybig">Let's take a moment to rest and reflect on caring as a practice. <a href="http://srccon.org/srccon-care-2022/">Join us for this online event December 8-9, 2022</a>. 
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 <p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
