--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2 class="special">Join us for SRCCON:CARE</h2>
+<h2 class="special">Concluding 2022 with CARE</h2>
 <a href="http://srccon.org/srccon-care-2022/"><img class="big-image" src="/media/img/srccon_care_logo.png" style="width: 100%;" alt="SRCCON:CARE logo with OpenNews logo dots in place of the O"></a>
 <!--<p class="caption" style="text-align: left; margin-top: 2px;"></p>-->
 
@@ -31,7 +31,7 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">Let's take a moment to rest and reflect on caring as a practice. <a href="http://srccon.org/srccon-care-2022/">Join us for this online event December 8-9, 2022</a>. 
+<p class="bodybig">Our last event of the year was a place to <a href="http://srccon.org/srccon-care-2022/">rest and reflect on caring as a practice.</a> Help us bring that <a href="https://opennews.networkforgood.com/">emphasis on care into the new year</a>. </p>
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 <p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
