survey update post

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">To better understand this community and how we support one another, we're analyzing responses to the <a href="/what/community/survey/">News Nerd Survey</a>. We plan a full release of the data in February, and we already have <a href="/blog/survey-first-look/">an early look at the findings</a>. </p>
+<p class="bodybig">To better understand this community and how we support one another, we're conducted another iteration of the <a href="/what/community/survey/">News Nerd Survey</a>. Take a <a href="https://source.opennews.org/articles/2022-news-nerd-survey-overall-findings/">look at the recent findings</a>. </p>
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 <p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
