SRCCON 2023 CFP launch update

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2 class="special">Reflections on the news nerd community</h2>
-<a href="/blog/survey-first-look/"><img class="big-image" src="/media/img/blog/kaleidoscope.jpg" style="width: 100%;" alt="A multi-colored refraction of a kaleidoscope with light shining through."></a>
-<p class="caption" style="text-align: left; margin-top: 2px;">With each turn, we get a new perspective. (Photo by <a href="https://www.flickr.com/photos/rka/39453999/in/photolist-4udin-FqhWD3-4q4Jsi-8Z1ZHQ-2jmRnqN-4oRUp6-9SEPAi-46L1Ln-C17FKF-hUMaH-47kQdd-dqLrgN-9gBRjc-2B4F78-4FiwAo-3heNkH-2m5y9zZ-4jbx9v-4FirFq-dsnos4-sUpBZ4-2gpzcJK-5JrwBT-a29oNy-cBzuE-5Jrwye-eDr2A8-8QN46z-4Feh7F-9VENPo-4ELDyj-4FiwSL-4FedRv-5zcbKT-2zboso-4FiwcS-4DuPaS-7FtjCF-wyuJzd-5Cs19i-2J51Ta-5A3pdS-dkXRzx-HRirr-8V5EA-MbXFk-MbR1E-5dLm7n-3NQrPy-dgUbZH">Rudolf Amman</a>)</p>
-
+<h2 class="special">SRCCON 2023 is back in Minneapolis</h2>
+<a href="https://2023.srccon.org/"><img class="big-image" src="/media/img/srccon_2023_logo.png" style="width: 100%;" alt="SRCCON 2023 logo"></a>
 
 <style>
   h2.special {
@@ -31,7 +29,8 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">To better understand this community and how we support one another, we're conducted another iteration of the <a href="/what/community/survey/">News Nerd Survey</a>. Take a <a href="https://source.opennews.org/articles/how-newsrooms-pay-journalist-coders-2023">look at the salary analysis and full findings</a>. </p>
+<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities will take place in Minneapolis, MN from October 17-18, 2023. Our <a href="https://2023.srccon.org/participation/form/">call for participation form</a> is now open! <a href="https://2023.srccon.org/">Learn more and join us</a>.</p>
+
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 <p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
