add srccon 2023 post

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities will take place in Minneapolis, MN from October 17-18, 2023. Our <a href="https://2023.srccon.org/participation/form/">call for participation form</a> is now open! <a href="https://2023.srccon.org/">Learn more and join us</a>.</p>
+<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities will take place in Minneapolis this October 17-18. <a href="/blog/giving-at-srccon-2023/">Here&rsquo;s how we&rsquo;ll be building community together</a> at SRCCON 2023. (<a href="https://2023.srccon.org/">Learn more about SRCCON!</a>)</p>
 
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
