update homepage srccon blog link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2 class="special">SRCCON 2023 is back in Minneapolis</h2>
+<h2 class="special">Looking ahead after SRCCON 2023</h2>
 <a href="https://2023.srccon.org/"><img class="big-image" src="/media/img/srccon_2023_logo.png" style="width: 100%;" alt="SRCCON 2023 logo"></a>
 
 <style>
@@ -29,7 +29,7 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities took place in Minneapolis on October 17-18. <a href="/blog/giving-at-srccon-2023/">Here&rsquo;s how we built community together</a> at SRCCON 2023. (<a href="https://2023.srccon.org/">Learn more about SRCCON!</a>)</p>
+<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities took place in Minneapolis on October 17-18. <a href="/blog/srccon-2023-looking-ahead/">Here&rsquo;s how we connected, and what we&rsquo;re carrying into 2024</a>. (<a href="https://2023.srccon.org/">Learn more about SRCCON!</a>)</p>
 
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
