update community call page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ excerpt:
 ---
 
 <h2 class="special">Looking ahead after SRCCON 2023</h2>
-<a href="https://2023.srccon.org/"><img class="big-image" src="/media/img/srccon_2023_logo.png" style="width: 100%;" alt="SRCCON 2023 logo"></a>
+<a href="https://2023.srccon.org/"><img class="big-image" src="/media/img/blog/srccon_2023_looking_ahead.jpg" style="width: 100%;" alt="A facilitator listens to discussion during a session at SRCCON 2023."></a>
 
 <style>
   h2.special {
