add homepage teaser for srccon 2024

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@ excerpt:
 <!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<h2 class="special">Looking ahead after SRCCON 2023</h2>
-<a href="https://2023.srccon.org/"><img class="big-image" src="/media/img/blog/srccon_2023_looking_ahead.jpg" style="width: 100%;" alt="A facilitator listens to discussion during a session at SRCCON 2023."></a>
-
 <style>
   h2.special {
     text-transform: none;
@@ -29,7 +26,10 @@ excerpt:
   }
 </style>
 
-<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities took place in Minneapolis on October 17-18. <a href="/blog/srccon-2023-looking-ahead/">Here&rsquo;s how we connected, and what we&rsquo;re carrying into 2024</a>. (<a href="https://2023.srccon.org/">Learn more about SRCCON!</a>)</p>
+<h2 class="special">Join us at SRCCON this year!</h2>
+<a href="https://2024.srccon.org/"><img class="big-image" src="/media/img/srccon_2024_logo.png" style="width: 100%;" alt="SRCCON 2024 logo"></a>
+
+<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities is coming back to Minneapolis on August 15-16, 2024. Our <a href="https://2024.srccon.org/participation/form/">call for participation form</a> is now open! <a href="https://2024.srccon.org/">Learn more and join us</a>.</p>
 
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
