new splash and slight transition edit

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@ excerpt:
   }
 </style>
 
-<h2 class="special">Join us at SRCCON this year!</h2>
-<a href="https://2024.srccon.org/"><img class="big-image" src="/media/img/srccon_2024_logo.png" style="width: 100%;" alt="SRCCON 2024 logo"></a>
+<h2 class="special">Support for your elections reporting</h2>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf_GZxz7ctjv5Tasox0GMWCP8CTax0sh7GUgppVUQhmolLVJA/viewform"><img class="big-image" src="/media/img/voting-arrow.jpg" style="width: 100%;" alt="a photo of a sign pasted on a wall that is an arrow with VOTE printed on it, and upside down so it can be used in either direction"></a></p>
+<p class="caption" style="margin-top: -15px; text-align: left;">(Photo by <a href="https://www.flickr.com/photos/byzantiumbooks/32236018545/in/photolist-R7A2ec-2apAGcH-DLJHP1-EhkuS1-21DCcLu-5zi8qH-rMpQF-MexNs7-5zo4yU-EaYEeK-5y1Btd-4qkPpE-5zrW7E-2jU2pJ9-QzhkcS-5x7n7c-pDAvJ2-6aufw8-5wDTiJ-5zrKAJ-7kXM-7cMmqH-2k3a3Ya-nF5S3W-nF5yAa-dpZTwM-nVwA5J-dq1429-nXt3f3-nF5y24-nXsnRN-dpZNMi-nXz3ev-dpZPKr-nZmwqx-nVwznm-dpZQLT-nVwEJo-nXskWW-nXz23H-nXtdTC-nF6uUP-nF5DQQ-dpZYjE-nXsqAW-nF5ES7-nXsor5-nF6p26-nXgMfT-nZmkPx">Bill Smith</a>)</p>
 
-<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities is coming back to Minneapolis on August 15-16, 2024. Our <a href="https://2024.srccon.org/participation/form/">call for participation form</a> is now open! <a href="https://2024.srccon.org/">Learn more and join us</a>.</p>
+<p class="bodybig">As part of the Knight Election Hub effort to help journlaists covering the US election, <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_GZxz7ctjv5Tasox0GMWCP8CTax0sh7GUgppVUQhmolLVJA/viewform">join our weekly elections-focused community call, now through November 5th</a>. Come chat with us on Thursdays at 3 p.m. CT to discuss your election plans, hopes, dreams and fears as Election Day approaches. <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_GZxz7ctjv5Tasox0GMWCP8CTax0sh7GUgppVUQhmolLVJA/viewform">Fill out this form</a>, and we'll send you an invitation to join us!</p>
 
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
