--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ excerpt:
   }
 </style>
 
-<h2 class="special">Join us at SRCCON 2025!</h2>
-<p><a href="http://2025.srccon.org/participation/form/"><img class="big-image" src="/media/img/srccon_2025_logo.png" style="width: 100%;" alt="the logo for the twenty twenty-five Source-con conference held by OpenNews in Minneapolis July 10-11"></a></p>
-<!-- <p class="caption" style="margin-top: -15px; text-align: left;">(Photo by <a href="https://www.flickr.com/photos/byzantiumbooks/32236018545/in/photolist-R7A2ec-2apAGcH-DLJHP1-EhkuS1-21DCcLu-5zi8qH-rMpQF-MexNs7-5zo4yU-EaYEeK-5y1Btd-4qkPpE-5zrW7E-2jU2pJ9-QzhkcS-5x7n7c-pDAvJ2-6aufw8-5wDTiJ-5zrKAJ-7kXM-7cMmqH-2k3a3Ya-nF5S3W-nF5yAa-dpZTwM-nVwA5J-dq1429-nXt3f3-nF5y24-nXsnRN-dpZNMi-nXz3ev-dpZPKr-nZmwqx-nVwznm-dpZQLT-nVwEJo-nXskWW-nXz23H-nXtdTC-nF6uUP-nF5DQQ-dpZYjE-nXsqAW-nF5ES7-nXsor5-nF6p26-nXgMfT-nZmkPx">Bill Smith</a>)</p> -->
+<h2 class="special">OpenNews receives Press Forward funding to develop emergency preparedness infrastructure for news</h2>
+<p><a href="/2025-07-16-press-forward-release.md"><img class="big-image" src="/media/img/blog/srccon2025.jpg" style="width: 100%;" alt="An overhead view of Memorial Hall at Source-con 2025 in Minneapolis with conference attendees sitting around tables under the skylights of the main seating area.""></a></p>
+<p class="caption" style="margin-top: -15px; text-align: left;">(Photo by John Hernandez)</p>
 
-<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities is coming back to Minneapolis July 10-11, 2025. </p>
-<p class="bodybig">Check out <a href="https://2025.srccon.org/program/"> the program</a> to see what sessions and conversations we have in store! Our <a href="https://2025.srccon.org/participation/form/">call for participation form</a> will remain open until we reach capacity — fill it out to attend, share it with others and remember space is limited! <a href="https://2025.srccon.org/">Visit the SRCCON 2025 site to learn more and join us</a>.</p>
+<p class="bodybig">OpenNews is one of 22 organizations sharing $22.7 million to meet the urgent challenges local newsrooms face.</p>
+<p class="bodybig">OpenNews, NC Local, and Newspack will create “Emergency Mode for News” to equip local newsrooms with a plan and support to keep their communities informed when disasters happen with funding from Press Forward, a national initiative to reimagine local news.</p>
 
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
