--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@ excerpt:
   }
 </style>
 
-<h2 class="special">OpenNews receives Press Forward funding to develop emergency preparedness infrastructure for news</h2>
+<h2 class="special">OpenNews to develop "Emergency Mode for News" with Press Forward funding</h2>
 <p><a href="/2025-07-16-press-forward-release.md"><img class="big-image" src="/media/img/blog/srccon2025.jpg" style="width: 100%;" alt="An overhead view of Memorial Hall at Source-con 2025 in Minneapolis with conference attendees sitting around tables under the skylights of the main seating area.""></a></p>
 <p class="caption" style="margin-top: -15px; text-align: left;">(Photo by John Hernandez)</p>
 
-<p class="bodybig">OpenNews is one of 22 organizations sharing $22.7 million to meet the urgent challenges local newsrooms face.</p>
-<p class="bodybig">OpenNews, NC Local, and Newspack will create “Emergency Mode for News” to equip local newsrooms with a plan and support to keep their communities informed when disasters happen with funding from Press Forward, a national initiative to reimagine local news.</p>
-
+<p class="bodybig">OpenNews is one of 22 organizations sharing $22.7 million to meet the urgent challenges local newsrooms face. <br>
+ 
+OpenNews, NC Local, and Newspack will equip local newsrooms with a plan, infrastructure and support to keep their communities informed when disasters happen with funding from Press Forward, a national initiative to reimagine local news.</p>
 
 <h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 <p>Read more on the <a href="/blog">OpenNews Blog.</a></p>
