--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ excerpt:
 </style>
 
 <h2 class="special">OpenNews to develop Emergency Mode for News with support from Press Forward</h2>
-<p><a href="/2025-07-16-press-forward-release.md"><img class="big-image" src="/media/img/blog/srccon2025.jpg" style="width: 100%;" alt="An overhead view of Memorial Hall at Source-con 2025 in Minneapolis with conference attendees sitting around tables under the skylights of the main seating area."></a></p>
+<p><a href="/2025-07-16-press-forward-release.md"><img class="big-image" src="/media/img/blog/srccon2025.jpg" style="width: 100%;" alt="A group of 10 conference participants having a deep roundtable discussion in Memorial Hall at Source-con 2025 in Minneapolis."></a></p>
 <p class="caption" style="margin-top: -15px; text-align: left;">(Photo by John Hernandez)</p>
 
 <p class="bodybig">OpenNews is one of 22 organizations sharing $22.7 million <a href="/2025-07-16-press-forward-release.md">to meet the urgent challenges local newsrooms face.</a></p>
