--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ excerpt:
 <p><a href="/2025-07-16-press-forward-release.md"><img class="big-image" src="/media/img/blog/srccon2025.jpg" style="width: 100%;" alt="A group of 10 conference participants having a deep roundtable discussion in Memorial Hall at Source-con 2025 in Minneapolis."></a></p>
 <p class="caption" style="margin-top: -15px; text-align: left;">(Photo by John Hernandez)</p>
 
-<p class="bodybig">OpenNews is one of 22 organizations sharing $22.7 million <a href="/2025-07-16-press-forward-release.md">to meet the urgent challenges local newsrooms face.</a></p>
+<p class="bodybig">OpenNews is one of 22 organizations sharing $22.7 million <a href="/2025-07-16-press-forward-release">to meet the urgent challenges local newsrooms face.</a></p>
  
 <p class="bodybig">OpenNews, NC Local, and Newspack will equip local newsrooms with a plan, infrastructure and support to keep their communities informed when disasters happen with funding from Press Forward, a national initiative to reimagine local news.</p>
 
