--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ excerpt:
 </style>
 
 <h2 class="special">OpenNews to develop Emergency Mode for News with support from Press Forward</h2>
-<p><a href="/press-forward-release"><img class="big-image" src="/media/img/blog/srccon2025.jpg" style="width: 100%;" alt="A group of 10 conference participants having a deep roundtable discussion in Memorial Hall at Source-con 2025 in Minneapolis."></a></p>
+<p><a href="/blog/press-forward-release"><img class="big-image" src="/media/img/blog/srccon2025.jpg" style="width: 100%;" alt="A group of 10 conference participants having a deep roundtable discussion in Memorial Hall at Source-con 2025 in Minneapolis."></a></p>
 <p class="caption" style="margin-top: -15px; text-align: left;">(Photo by John Hernandez)</p>
 
-<p class="bodybig">OpenNews is one of 22 organizations sharing $22.7 million <a href="/press-forward-release">to meet the urgent challenges local newsrooms face.</a></p>
+<p class="bodybig">OpenNews is one of 22 organizations sharing $22.7 million <a href="/blog/press-forward-release">to meet the urgent challenges local newsrooms face.</a></p>
  
 <p class="bodybig">OpenNews, NC Local, and Newspack will equip local newsrooms with a plan, infrastructure and support to keep their communities informed when disasters happen with funding from Press Forward, a national initiative to reimagine local news.</p>
 
